--- a/FrostyRun/FrostyRun.csproj
+++ b/FrostyRun/FrostyRun.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="GeoSketch" Version="1.10.0" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Content\audio\ChristmasSong.mp3">
@@ -67,6 +68,7 @@
     <Folder Include="Content\audio\" />
     <Folder Include="Content\bin\Windows\audio\" />
     <Folder Include="Content\bin\Windows\Content\audio\" />
+    <Folder Include="Highscore\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
